@@ -20,6 +20,12 @@ Major changes since man-db 2.8.7:
 	* If run with no arguments or only a section, man now suggests
 	  running "man man".
 
+	* man now understands the <page>(<section>) form on its command
+	  line, so for example "man 'chmod(2)'" is now the same as "man 2
+	  chmod".  While this requires more quoting, it may also be more
+	  convenient when copying and pasting cross-references to manual
+	  pages.)
+
 	Compatibility notes:
 	--------------------
 
